finish moving screen and bird movement

--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
   </head>
   <body>
     <h3>Show up bro</h3>
-    <canvas id="canvas" width="288" height="512"></canvas>
-    <script type="text/javascript" src="main.js"></script>
+    <canvas id="canvas" width="288" height="512">
+      <script src="main.js"></script>
+    </canvas>
+
   </body>
 </html>
